[dependencies]
ethers = "2.0"
hdkey = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
solana-sdk = "1.18"
ton-client = "0.5"
near-sdk = "4.1"
stellar-sdk = "0.3"
sui-sdk = "0.2"