[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "network"
path = "main.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"
tracing = "0.1.37"
warp = "0.3.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
prometheus = "0.13.3"
once_cell = "1.18.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
num_cpus = "1.15.0"
regex = "1.8.3"
serde_yaml = "0.9.21"
libp2p = { version = "0.35.1", default-features = false, features = ["libp2p-plaintext", "libp2p-dns", "libp2p-tcp", "libp2p-yamux", "libp2p-mplex", "libp2p-kad", "libp2p-websocket", "libp2p-mdns"] }
bip39 = "2.1.0"
bip32 = "0.5"
tonic = "0.10"
prost = "0.11"
futures = "0.3"
async-std = "1.12"
wasmtime = "12.0"
webrtc = "0.6"
kafka = "0.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
html-escape = "0.2.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
base64 = "0.21.0"
toml = "0.7.6"
dotenv = "0.15.0"
log = "0.4.19"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"