[package]
name = "network"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "lib.rs"

[[bin]]
name = "network"
path = "main.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"
tracing = "0.1.37"
warp = "0.3.3"
redis = { version = "0.23.0", features = ["tokio-comp"] }
prometheus = "0.13.3"
once_cell = "1.18.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
num_cpus = "1.15.0"
regex = "1.8.3"
serde_yaml = "0.8.26"
yaml-rust = "0.4.5"
libp2p = { version = "0.55.0", default-features = false, features = ["noise", "tcp", "yamux"] }
libp2p-noise = "0.46.0"
libp2p-mplex = "0.43.0"
libp2p-yamux = "0.47.0"
libp2p-websocket = "0.45.0"
libp2p-kad = "0.47.0"
libp2p-mdns = "0.47.0"
libp2p-tcp = "0.43.0"
libp2p-dns = "0.43.0"
bip39 = "2.1.0"
bip32 = "0.5"
futures = "0.3"
async-std = "1.12"
wasmtime = { version = "0.39.1", default-features = false }
kafka = "0.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
html-escape = "0.2.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
base64 = "0.21.0"
toml = "0.5.11"
dotenv = "0.15.0"
log = "0.4.19"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"

[features]
default = ["standard"]
standard = []