[package]
name = "snipebot"
version = "0.1.0"
edition = "2021"
authors = ["Diamond Chain Team"]
description = "Bot giao dịch DeFi thông minh hỗ trợ đa blockchain với các tính năng cao cấp"
license = "MIT"

[dependencies]
# Blockchain & Ethereum
ethers = { version = "=2.0.0", features = ["ws", "rustls"] }
web3 = "0.18.0"
secp256k1 = { version = "0.24.0", features = ["rand"] }

# Async & concurrency
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"

# Serialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
bincode = "1.3.3"

# Error handling
anyhow = "1.0.70"
thiserror = "1.0.40"

# Logging & metrics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
prometheus = "0.13.3"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"

# HTTP & API
warp = "0.3.5"
reqwest = { version = "0.11.16", features = ["json"] }
urlencoding = "2.1.2"

# Storage
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"
once_cell = "1.18.0"
regex = "1.8.3"
num_cpus = "1.15.0"
dotenv = "0.15.0"
clap = { version = "4.2.4", features = ["derive"] }
sys-info = "0.9.1"
lazy_static = "1.4.0"

# Internal dependencies
common = { path = "../common" }

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
test-log = "0.2.11"

[lib]
name = "snipebot"
path = "src/lib.rs"

[[bin]]
name = "snipebot"
path = "src/main.rs"