[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"
tracing = "0.1.37"
warp = "0.3.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
prometheus = "0.13.3"
once_cell = "1.18.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
num_cpus = "1.15.0"
regex = "1.8.3"
serde_yaml = "0.9.21"
bip39 = "2.1.0"
bip32 = "0.5"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.1"
sha3 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"

[[test]]
name = "integration"
path = "tests/integration.rs"